# simple-p2p-vpn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release-unstable.yaml  build-release.yaml
client/: Cargo.toml
client/src/: main.rs  tap_device.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
