[workspace]
resolver = "2"
members = ["client", "server", "shared"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true        # Enable Link Time Optimization
strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
# codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
