[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
shared = { path = "../shared" }

[target.'cfg(windows)'.dependencies]
# tap-windows = "*"
tap-windows = { git = "https://github.com/Legend-Master/tap-windows" }
