[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
macaddr = { version = "1.0.1", features = ["serde"] }
shared = { path = "../shared" }

[target.'cfg(windows)'.dependencies]
# tap-windows = "*"
tap-windows = { git = "https://github.com/Legend-Master/tap-windows" }
# tap-windows = { path = "../../tap-windows" }
