[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.33"
macaddr = { version = "1.0.1", features = ["serde"] }
shared = { path = "../shared" }

[target.'cfg(target_os = "windows")'.dependencies]
tap-windows = { git = "https://github.com/Legend-Master/tap-windows" }
# tap-windows = { path = "../../tap-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27.1", features = ["net"] }
tun-tap = { version = "0.1.4", default-features = false }
