[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
macaddr = { version = "1.0.1", features = ["serde"] }
shared = { path = "../shared" }
socket2 = "0.5.5"
time = { version = "0.3.31", features = [
    "macros",
    "formatting",
    "local-offset",
] }
